@@ -478,10 +478,10 @@ abstract class TBaseValidator extends TLabel implements IValidator
 	 */
 	public function validate()
 	{
-		$this->onValidate();
+		if($visible=$this->getVisible(true))
+			$this->onValidate();
 		$this->setIsValid(true);
-		$control=$this->getValidationTarget();
-		if($control && $this->getVisible(true) && $this->getEnabled())
+		if($this->getValidationTarget() && $visible && $this->getEnabled())
 		{
 			if($this->evaluateIsValid())
 			{
@@ -538,6 +538,9 @@ abstract class TBaseValidator extends TLabel implements IValidator
 
 	/**
 	 * This event is raised right before the validator starts to perform validation.
+	 * You may use this event to change the behavior of validation.
+	 * For example, you may disable the validator if certain condition is satisfied.
+	 * Note, the event will NOT be raised if the validator is invisible.
 	 */
 	public function onValidate()
 	{
